[package]
edition = "2021"
name = "find-typescript-imports"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rayon = "1.7.0"
swc_common = "0.31.12"
swc_ecma_parser = { version = "0.136.0", features = ["typescript"] }
swc_ecma_visit = "0.92.0"
swc_ecma_ast = "0.106.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
